[gd_scene load_steps=5 format=3 uid="uid://ufl1nsshlx8q"]

[ext_resource type="Script" uid="uid://eh62ms7b5enf" path="res://player.gd" id="1_kpjcp"]
[ext_resource type="Texture2D" uid="uid://oeiv75dlkssm" path="res://CubageSpritesV1-export.png" id="1_xhfnw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4flbx"]
atlas = ExtResource("1_xhfnw")
region = Rect2(320, 160, 80, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(80, 80)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_kpjcp")

[node name="OuterSprite" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_4flbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_onrkg")

[node name="RaycastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-1600, 0)
collision_mask = 2

[node name="RaycastRight" type="RayCast2D" parent="."]
target_position = Vector2(1600, 0)
collision_mask = 2

[node name="RaycastUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -1600)
collision_mask = 2

[node name="RaycastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 1600)
collision_mask = 2

[node name="LeftMagnet" type="Sprite2D" parent="."]
texture = ExtResource("1_xhfnw")
region_enabled = true
region_rect = Rect2(0, 80, 80, 80)

[node name="RightMagnet" type="Sprite2D" parent="."]
texture = ExtResource("1_xhfnw")
region_enabled = true
region_rect = Rect2(0, 240, 80, 80)

[node name="UpMagnet" type="Sprite2D" parent="."]
texture = ExtResource("1_xhfnw")
region_enabled = true
region_rect = Rect2(0, 0, 80, 80)

[node name="DownMagnet" type="Sprite2D" parent="."]
texture = ExtResource("1_xhfnw")
region_enabled = true
region_rect = Rect2(0, 160, 80, 80)

[node name="Camera2D" type="Camera2D" parent="."]
